Update index.html  - comment added

--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
   </head>
   <body>
     <!--The Top section -->
+    <!--The friend section have to be .. --!>
 
     <div class="d-flex justify-content-center">
+      
       <div class="top-intro text-center text-success display-1">
-        Hello friend
+        Hello friend 
       </div>
     </div>
 
